objects/IP_Revision__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DK_Date__c</fullName>
        <label>Design Kit Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Kit_meth_choice__c</fullName>
        <label>Design Kit _meth_choice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FoundryRev_Expiration__c</fullName>
        <label>Expiraton</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FoundryRev_ProdActual__c</fullName>
        <label>Prod Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FoundryRev_ProdPlan__c</fullName>
        <label>Prod Planned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FoundryRev_ProtoActual__c</fullName>
        <label>EvalProtoActual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FoundryRev_ProtoPlan__c</fullName>
        <label>EvalProtoPlanned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IP_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IP_Element</label>
        <referenceTo>IP_Element__c</referenceTo>
        <relationshipLabel>IP Revisions</relationshipLabel>
        <relationshipName>IP_Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IP_Name__c</fullName>
        <formula>IP_Element__r.ip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Type__c</fullName>
        <formula>Text(IP_Element__r.iptype__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <label>M-LastModifiedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MethComp_Date__c</fullName>
        <label>Methodology Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NOTEID__c</fullName>
        <label>M-NOTEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Readers__c</fullName>
        <label>Readers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rel_Date_Choice__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Watermark__c</fullName>
        <label>Watermark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>audit_history__c</fullName>
        <label>M-audit_history</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>baseline__c</fullName>
        <label>Baseline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>beta__c</fullName>
        <label>Beta Availability Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>beta_old__c</fullName>
        <label>M-beta_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>betacomplete__c</fullName>
        <label>Beta Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>betacomplete_actual__c</fullName>
        <label>M-betacomplete_actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>betacomplete_old__c</fullName>
        <label>M-betacomplete_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cellkey__c</fullName>
        <label>CellKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cert_cmplt__c</fullName>
        <label>M-cert_cmplt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cert_cmplt_actual__c</fullName>
        <label>M-cert_cmplt_actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cert_cmplt_actualset__c</fullName>
        <label>M-cert_cmplt_actualset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cert_date__c</fullName>
        <label>Certification Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cert_type_core__c</fullName>
        <label>M-cert_type_core</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cert_type_noncore__c</fullName>
        <label>Certification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HW Validated</fullName>
                </value>
                <value>
                    <fullName>Full Cert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>changerequests__c</fullName>
        <label>Associated Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>classofuse__c</fullName>
        <label>M-classofuse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clearquestissues__c</fullName>
        <label>Requests Related ClearQuest Issues</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>complete__c</fullName>
        <label>CompleteText</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>complete_actual__c</fullName>
        <label>M-complete_actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>complete_old__c</fullName>
        <label>M-complete_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>completetext__c</fullName>
        <label>M-completetext</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copy__c</fullName>
        <label>M-copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>corekey__c</fullName>
        <label>Corekey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>corerevision__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Full (not Certified)</fullName>
                </value>
                <value>
                    <fullName>Full (Certified)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>corerevision_preliminary__c</fullName>
        <label>RTx Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdby__c</fullName>
        <label>M-createdby</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creation__c</fullName>
        <label>Creation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>currentip__c</fullName>
        <label>M-currentip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentrevisionname__c</fullName>
        <label>M-currentrevisionname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currenttechnology__c</fullName>
        <label>M-currenttechnology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>custchip__c</fullName>
        <label>Customers/Chip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer__c</fullName>
        <label>customer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APPLE</fullName>
                </value>
                <value>
                    <fullName>DENALI SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>HITACHI</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>custrestricted__c</fullName>
        <label>Customer Restricted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>M-description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>designer__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>devcomplete__c</fullName>
        <label>M-devcomplete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>devcomplete_actual__c</fullName>
        <label>M-devcomplete_actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>devcomplete_actualset__c</fullName>
        <label>M-devcomplete_actualset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>devcomplete_choice__c</fullName>
        <label>IP Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>devcomplete_old__c</fullName>
        <label>M-devcomplete_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>developmentcomplete__c</fullName>
        <label>IP Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>developmentcomplete_old__c</fullName>
        <label>M-developmentcomplete_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>devstatus__c</fullName>
        <label>Dev Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dk__c</fullName>
        <label>Design Kit_DK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dk_choice__c</fullName>
        <label>M-dk_choice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dk_date_choice__c</fullName>
        <label>M-dk_date_choice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dk_meth__c</fullName>
        <label>Design Kit_DK_Meth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dk_old__c</fullName>
        <label>M-dk_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docauthor__c</fullName>
        <label>Authors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editdocauthor__c</fullName>
        <label>Authors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andy Anderson/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Adrian Butter/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Ahmed Y Ginawi/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Aidan Kelly/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Allen Brouillette/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Allyson Stewart/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Anjali R Malladi/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Anuradha Srikantaiah1/India/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Barbara Powers/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Bill Danilich/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Bill N On/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Bob Lynch/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Bret Rockwell/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Brian Worth/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Bruce Ditmyer/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Bryan McDonald/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Camil Fayad/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Carolyn Paddock-Moore/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Catherine Keim/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Charles P Carpenter/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Chris Rebeor/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Christine Fuller/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Christopher G Murphy/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Christopher Kiegle/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Christopher Reynolds/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Chris Ro/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Christopher Rosato/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Christopher R White/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Colleen Wemple/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Cristina C Pierce/US/GF/IDE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>flgdeleted__c</fullName>
        <label>M-flgdeleted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>flgprocessed__c</fullName>
        <label>M-flgprocessed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>form__c</fullName>
        <label>M-form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>foundryrev__c</fullName>
        <label>Foundry Revision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>foundryrev_ipreadiness__c</fullName>
        <label>Foundry IP Readiness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eval</fullName>
                </value>
                <value>
                    <fullName>Proto</fullName>
                </value>
                <value>
                    <fullName>Prod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>full_description__c</fullName>
        <label>Full Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ga__c</fullName>
        <label>GA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ga_old__c</fullName>
        <label>M-ga_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hard_valid__c</fullName>
        <label>Valid Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>history__c</fullName>
        <label>Revision History</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>internal__c</fullName>
        <label>Internal Usage Only</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>internalibm__c</fullName>
        <label>Internal IBM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ipkey__c</fullName>
        <formula>IP_Element__r.ipkey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iptype__c</fullName>
        <label>IP Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kittype__c</fullName>
        <label>M-kittype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kittype_meth__c</fullName>
        <label>Design Kit_kittype_meth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Delta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lastupdated__c</fullName>
        <label>LastUpdated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>measurements__c</fullName>
        <label>Use for Measurements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>measurements_manual__c</fullName>
        <label>Manual Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Measurements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>measurements_old__c</fullName>
        <label>M-measurements_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>methcomplete__c</fullName>
        <label>Methodology Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>methenablement__c</fullName>
        <label>Methodology Enablement  Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mgr__c</fullName>
        <label>Mgr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>missingdata__c</fullName>
        <label>MissingData</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>na__c</fullName>
        <label>M-na</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ndrcharacteristics__c</fullName>
        <label>NDR Characteristics</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scaled Timings</fullName>
                </value>
                <value>
                    <fullName>Schematic Based/Bounded Timings</fullName>
                </value>
                <value>
                    <fullName>Layout Based/Extracted Timings</fullName>
                </value>
                <value>
                    <fullName>Spec&apos;ed Performance</fullName>
                </value>
                <value>
                    <fullName>Parameterized Timing</fullName>
                </value>
                <value>
                    <fullName>Static/Leakage Power</fullName>
                </value>
                <value>
                    <fullName>Dynamic Power</fullName>
                </value>
                <value>
                    <fullName>MABIST Support</fullName>
                </value>
                <value>
                    <fullName>LBIST Support</fullName>
                </value>
                <value>
                    <fullName>AC Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>noncorerevision__c</fullName>
        <label>M-noncorerevision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonhard_valid__c</fullName>
        <label>Valid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>oldbeta__c</fullName>
        <label>M-oldbeta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldbetacomplete__c</fullName>
        <label>M-oldbetacomplete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldcert_date__c</fullName>
        <label>M-oldcert_date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldcomplete__c</fullName>
        <label>M-oldcomplete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldcorerevision__c</fullName>
        <label>M-oldcorerevision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldcustomer__c</fullName>
        <label>M-oldcustomer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldcustrestricted__c</fullName>
        <label>M-oldcustrestricted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>olddescription__c</fullName>
        <label>M-olddescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>olddevelopmentcomplete__c</fullName>
        <label>M-olddevelopmentcomplete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>olddk_choice__c</fullName>
        <label>M-olddk_choice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldfull_description__c</fullName>
        <label>M-oldfull_description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldga__c</fullName>
        <label>M-oldga</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldinternal__c</fullName>
        <label>M-oldinternal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldip__c</fullName>
        <label>M-oldip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldkittype__c</fullName>
        <label>M-oldkittype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldndrcharacteristics__c</fullName>
        <label>M-oldndrcharacteristics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldreason__c</fullName>
        <label>oldreason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldrel_date__c</fullName>
        <label>M-oldrel_date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldrevision__c</fullName>
        <label>M-oldrevision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldrevision_name__c</fullName>
        <label>M-oldrevision_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldruleschanging__c</fullName>
        <label>M-oldruleschanging</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldtechnology__c</fullName>
        <label>M-oldtechnology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldtestsite__c</fullName>
        <label>M-oldtestsite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldtestsitename__c</fullName>
        <label>M-oldtestsitename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldtk_version__c</fullName>
        <label>M-oldtk_version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldvalid__c</fullName>
        <label>M-oldvalid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldwatermark__c</fullName>
        <label>M-oldwatermark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>originalmodtime__c</fullName>
        <label>M-originalmodtime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>os__c</fullName>
        <label>Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIX 4.3 - 64-bit</fullName>
                </value>
                <value>
                    <fullName>AIX 5.1 - 64-bit</fullName>
                </value>
                <value>
                    <fullName>HP V11.0 - 64-bit</fullName>
                </value>
                <value>
                    <fullName>Solaris 5.7 - 32-bit</fullName>
                </value>
                <value>
                    <fullName>Solaris 5.7 - 64-bit</fullName>
                </value>
                <value>
                    <fullName>Linux Red Hat 7.3 - 32-bit</fullName>
                </value>
                <value>
                    <fullName>Linux Red Hat 3.0 - 64-bit Opteron</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pdk_type__c</fullName>
        <label>PDK Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ERD</fullName>
                </value>
                <value>
                    <fullName>PDK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provider3P_view__c</fullName>
        <label>3rd Party Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provider3p_rev__c</fullName>
        <label>Provider Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>readerfield__c</fullName>
        <label>Reader Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reason__c</fullName>
        <label>Reason for Revision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Release</fullName>
                </value>
                <value>
                    <fullName>Content Update</fullName>
                </value>
                <value>
                    <fullName>Bug Fix</fullName>
                </value>
                <value>
                    <fullName>Function Update</fullName>
                </value>
                <value>
                    <fullName>Methodology Refresh</fullName>
                </value>
                <value>
                    <fullName>Planned Refresh</fullName>
                </value>
                <value>
                    <fullName>Certification Refresh</fullName>
                </value>
                <value>
                    <fullName>TestSite</fullName>
                </value>
                <value>
                    <fullName>Internal Release</fullName>
                </value>
                <value>
                    <fullName>Customer Restricted</fullName>
                </value>
                <value>
                    <fullName>DM/Model Refresh</fullName>
                </value>
                <value>
                    <fullName>Alpha</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Readiness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ref__c</fullName>
        <label>M-$ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_date__c</fullName>
        <label>M-rel_date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_date_old__c</fullName>
        <label>M-rel_date_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>restricted__c</fullName>
        <label>Restricted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revision__c</fullName>
        <label>Revision Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revision_name__c</fullName>
        <label>Revision Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revision_name_view__c</fullName>
        <label>Revision Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revisiondoclink__c</fullName>
        <label>M-revisiondoclink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revisionname__c</fullName>
        <label>Revision Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>